--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<p>Hello world</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Page</title>
+</head>
+<body>
+    <h1>Welcome to My Website! </h1>
+    <p>Click the link below to visit the Hadamard Database:</p>
+    <a href="test.html">HDDB</a>
+</body>
+</html>
