--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
   <h1>Welcome to cybcat's Homepage!</h1>
   <p>Click the link below to visit the Hadamard Product DataBase:</p>
   <a href="test.html">HPDB</a>
+  <p>Click the link below to play goodluck pool:</p>
+  <a href="pool.html">pool</a>
 
   <br><br>
 
