--- a/pool.html
+++ b/pool.html
@@ -38,14 +38,14 @@ progress{width:100%;height:14px}
 .smart-aim-status{text-align:center;padding:8px;background:rgba(46,204,113,.2);border-radius:6px;display:none}
 .smart-aim-status.show{display:block}
 </style></head><body>
-<h1>台球好运模拟器</h1>
+<h1>台球狗运模拟器</h1>
 
 <div class="container"><div class="content-wrapper">
   <div class="table-section">
     <div class="canvas-container"><canvas id="poolTable" width="800" height="400"></canvas></div>
     <div class="controls-below">
       <div class="control-group">
-        <div class="control-label"><span>预测时间:</span><span id="predictionTimeValue" class="control-value">15</span>s</div>
+        <div class="control-label"><span>预测时间:</span><span id="predictionTimeValue" class="control-value">30</span>s</div>
         <input type="range" id="predictionTimeControl" min="5" max="50" value="15" step="5"/>
       </div>
       <div class="control-group">
@@ -58,7 +58,7 @@ progress{width:100%;height:14px}
   <div class="side" id="sidePanel"><div class="grid">
     <div class="row2">
       <div class="chip">
-        <label>红球入袋数: <span id="pottedCount">0</span></label>
+        <label>彩球入袋数: <span id="pottedCount">0</span></label>
         <div class="small">模拟时间: <span id="timeCounter">0.00</span>s</div>
       </div>
       <div class="chip">
@@ -113,7 +113,7 @@ progress{width:100%;height:14px}
   </div></div>
 </div>
 
-<div class="info-panel"><div class="stats"><div class="stat-item">说明：瞎蒙一杆就行。</div></div></div>
+<div class="info-panel"><div class="stats"><div class="stat-item">说明：瞎蒙一杆就行。有时狗运因bug消失，请点击【停止所有球】恢复。</div></div></div>
 </div>
 
 <script>
@@ -123,6 +123,7 @@ const COLORS=['#E74C3C','#3498DB','#2ECC71','#F1C40F','#9B59B6','#1ABC9C','#E67E
 const hex2rgb=h=>[parseInt(h.slice(1,3),16),parseInt(h.slice(3,5),16),parseInt(h.slice(5,7),16)];
 let v0=12,mw=1,lossC=5,fric=.3,lossB=5,smartPredT=15,maxCol=2,pocketSize=.6;
 let balls=[],pockets=[],running=false,showRunTraj=true,potted=0,simT=0,aimX=0,aimY=0,aimLocked=false,aiming=false,angFine=0,raf=0,needTraj=true,needBg=true;
+let onlyWhiteTimer = null; // 用于计时只剩白球的状态
 const bg=document.createElement('canvas'),bgc=bg.getContext('2d',{alpha:false});
 const traj=document.createElement('canvas'),tctx=traj.getContext('2d',{alpha:true});
 let S=40;
@@ -140,7 +141,16 @@ const shotAngle=(w,f=angFine)=>{const dx=aimX-w.x,dy=aimY-w.y;if(Math.hypot(dx,d
 const requestDraw=()=>{if(raf)return;raf=requestAnimationFrame(()=>{raf=0;draw();});};
 
 const makeBall=(x,y,color,isWhite=false)=>({x,y,vx:0,vy:0,r:R,m:isWhite?mw:RED_M,c:color,rgb:isWhite?[255,255,255]:hex2rgb(color),w:isWhite,p:0,ccr:0});
-const makePockets=()=>{const r=pocketSize*.5;pockets=[{x:0,y:0,r},{x:W,y:0,r},{x:0,y:H,r},{x:W,y:H,r},{x:W/2,y:0,r},{x:W/2,y:H,r}];};
+// 修改口袋位置，使其位于实际边缘内侧
+const makePockets=()=>{const r=pocketSize*.5,offset=r;
+pockets=[
+  {x:offset,y:offset,r},           // 左上角
+  {x:W-offset,y:offset,r},         // 右上角
+  {x:offset,y:H-offset,r},         // 左下角
+  {x:W-offset,y:H-offset,r},       // 右下角
+  {x:W/2,y:offset,r},              // 上中
+  {x:W/2,y:H-offset,r}             // 下中
+];};
 const init=()=>{running=false;potted=0;simT=0;aimLocked=false;aiming=false;setFine(0);makePockets();balls=[];
 balls.push(makeBall(2,H/2,'#fff',true));let k=0,sx=15,sy=H/2;
 for(let row=0;row<4;row++)for(let col=0;col<=row;col++){if(balls.length>10)break;const hs=R*2.2,vs=R*2.0;
@@ -150,6 +160,7 @@ aimX=balls[0].x+5;aimY=balls[0].y;needBg=needTraj=1;ui();requestDraw();};
 
 const stepBall=b=>{if(b.p)return 0;const s=Math.hypot(b.vx,b.vy);if(s>EPS){const ns=Math.max(0,s-fric*DT),k=ns/s;b.vx*=k;b.vy*=k;}
 b.x+=b.vx*DT;b.y+=b.vy*DT;const blf=(100-lossB)/100;let hit=0;
+// 修改边界检测，考虑球半径
 if(b.x-b.r<0){b.x=b.r;b.vx=-b.vx*blf;hit=1;}else if(b.x+b.r>W){b.x=W-b.r;b.vx=-b.vx*blf;hit=1;}
 if(b.y-b.r<0){b.y=b.r;b.vy=-b.vy*blf;hit=1;}else if(b.y+b.r>H){b.y=H-b.r;b.vy=-b.vy*blf;hit=1;}
 return hit;};
@@ -159,10 +170,32 @@ const v1n=a.vx*nx+a.vy*ny,v1t=a.vx*tx+a.vy*ty,v2n=b.vx*nx+b.vy*ny,v2t=b.vx*tx+b.
 const v1n2=(v1n*(m1-m2)+2*m2*v2n)/(m1+m2),v2n2=(v2n*(m2-m1)+2*m1*v1n)/(m1+m2),elf=(100-lossC)/100;
 a.vx=(v1n2*nx+v1t*tx)*elf;a.vy=(v1n2*ny+v1t*ty)*elf;b.vx=(v2n2*nx+v2t*tx)*elf;b.vy=(v2n2*ny+v2t*ty)*elf;
 const ov=(md-d)/2;a.x-=ov*nx;a.y-=ov*ny;b.x+=ov*nx;b.y+=ov*ny;return 1;};
-const checkPots=countUI=>{for(const b of balls){if(b.p||b.w)continue;for(const pk of pockets){const dx=b.x-pk.x,dy=b.y-pk.y,rr=pk.r+b.r;
-if(dx*dx+dy*dy<rr*rr){b.p=1;if(countUI){potted++;$('pottedCount').textContent=potted;}break;}}}};
 
-// 预测：滑动窗口（从当前 ccr 开始，显示接下来 maxCol 次碰撞对应的轨迹段）
+// 进袋方向限制：角袋需指向对应象限；中袋需指向对应法向（上中: vy<0，下中: vy>0）
+const okPocketDir=(pk,vx,vy)=>{
+  if(Math.hypot(vx,vy)<STOP_V) return false;
+  const sx=pk.x<=R*2?-1:pk.x>=W-R*2?1:0, sy=pk.y<=R*2?-1:pk.y>=H-R*2?1:0;
+  if(sx&&sy) return vx*sx>0&&vy*sy>0;          // 角袋：右上(+, -)等按符号判断
+  if(pk.y<=R*2&&Math.abs(pk.x-W/2)<R*2) return vy<0;        // 上中
+  if(pk.y>=H-R*2&&Math.abs(pk.x-W/2)<R*2) return vy>0;        // 下中
+  return true;
+};
+
+const checkPots=countUI=>{
+  for(const b of balls){
+    if(b.p||b.w) continue;
+    for(const pk of pockets){
+      const dx=b.x-pk.x,dy=b.y-pk.y,rr=pk.r+b.r;
+      if(dx*dx+dy*dy<rr*rr && okPocketDir(pk,b.vx,b.vy)){
+        b.p=1;
+        if(countUI){potted++;$('pottedCount').textContent=potted;}
+        break;
+      }
+    }
+  }
+};
+
+// 预测：滑动窗口（从当前 ccr 开始，显示接下来 maxCol 次碰撞对应的轨迹段）+ 进袋方向限制
 function simPred({includeAim,recordSet=null,sample=1,maxSteps=60000}){
   const n=balls.length;
   const x=new Float64Array(n),y=new Float64Array(n),vx=new Float64Array(n),vy=new Float64Array(n);
@@ -211,9 +244,9 @@ function simPred({includeAim,recordSet=null,sample=1,maxSteps=60000}){
 
     for(let i=0;i<n;i++){
       if(p[i]||w[i]) continue;
-      for(const pk of pockets){
-        const dx=x[i]-pk.x,dy=y[i]-pk.y,rr=pk.r+r[i];
-        if(dx*dx+dy*dy<rr*rr){p[i]=1;break;}
+      for(let k=0;k<pockets.length;k++){
+        const pk=pockets[k],dx=x[i]-pk.x,dy=y[i]-pk.y,rr=pk.r+r[i];
+        if(dx*dx+dy*dy<rr*rr && okPocketDir(pk,vx[i],vy[i])){p[i]=1;break;}
       }
     }
   }
@@ -227,6 +260,7 @@ ctx.setTransform(dpr,0,0,dpr,0,0);bgc.setTransform(dpr,0,0,dpr,0,0);tctx.setTran
 const drawBg=()=>{const w=canvas.clientWidth,h=canvas.clientHeight;bgc.clearRect(0,0,w,h);
 bgc.fillStyle='#27ae60';bgc.fillRect(0,0,w,h);bgc.strokeStyle='#8b4513';bgc.lineWidth=6;bgc.strokeRect(0,0,w,h);
 bgc.strokeStyle='#1a5c30';bgc.lineWidth=2;bgc.strokeRect(R*S,R*S,(W-2*R)*S,(H-2*R)*S);
+// 绘制真实的袋口位置
 for(const pk of pockets){bgc.beginPath();bgc.arc(pk.x*S,pk.y*S,pk.r*S,0,Math.PI*2);bgc.fillStyle='#000';bgc.fill();
 bgc.beginPath();bgc.arc(pk.x*S,pk.y*S,pk.r*S*.7,0,Math.PI*2);bgc.fillStyle='#333';bgc.fill();}needBg=0;};
 const strokePoly=(pts,rgb,dynamic)=>{if(!pts||pts.length<4)return;const chunks=dynamic?10:1,n=pts.length/2;
@@ -246,7 +280,6 @@ ctx.strokeStyle='rgba(255,0,0,.8)';ctx.lineWidth=3;ctx.stroke();};
 const draw=()=>{if(needBg)drawBg();if(needTraj)drawTrajLayer();const w=canvas.clientWidth,h=canvas.clientHeight;
 ctx.clearRect(0,0,w,h);ctx.drawImage(bg,0,0,w,h);ctx.drawImage(traj,0,0,w,h);drawBalls();drawAim();};
 
-// 运行时轨迹：按碰撞滑窗更新（碰撞发生 -> 立刻重算并显示下一段 maxCol 次碰撞）
 let runTrajEnabled=false,runTraj=[];
 const enableRunTraj=()=>{
   runTrajEnabled=true; runTraj=Array(balls.length).fill(null);
@@ -266,8 +299,44 @@ const tick=()=>{if(!running)return;
   checkPots(true);
   if(dirty.size) updateRunTraj(dirty);
   simT+=DT;$('timeCounter').textContent=simT.toFixed(2);
+  
+  // 检查是否只剩白球
+  const onlyWhiteLeft = balls.length > 0 && balls.every(b => b.p || b.w);
+  
+  // 如果只剩白球，启动计时器
+  if(onlyWhiteLeft && !onlyWhiteTimer) {
+    onlyWhiteTimer = 0; // 开始计时
+  }
+  
+  // 更新计时器
+  if(onlyWhiteTimer !== null) {
+    onlyWhiteTimer += DT;
+    // 如果计时达到4秒，重启游戏
+    if(onlyWhiteTimer >= 4.0) {
+      running=false;
+      disableRunTraj();
+      aimLocked=false;
+      setFine(0);
+      onlyWhiteTimer = null; // 重置计时器
+      init(); // 重新初始化
+      requestDraw();
+      return;
+    }
+  }
+  
   const stopped=balls.every(b=>b.p||Math.hypot(b.vx,b.vy)<STOP_V);
-  if(stopped){running=false;disableRunTraj();aimLocked=false;setFine(0);const reds=balls.slice(1);if(reds.every(b=>b.p))setTimeout(init,1000);requestDraw();return;}
+  
+  if(stopped){
+    running=false;
+    disableRunTraj();
+    aimLocked=false;
+    setFine(0);
+    onlyWhiteTimer = null; // 重置计时器
+    // 每次球自然停止时执行初始化操作
+    balls.forEach(b=>b.ccr=0); // 重置碰撞计数器
+    needTraj=1; // 确保预测线正确显示
+    const reds=balls.slice(1);if(reds.every(b=>b.p))setTimeout(init,1000);requestDraw();return;
+  }
   requestDraw();requestAnimationFrame(tick);
 };
 
@@ -288,7 +357,7 @@ x.set(base.bx);y.set(base.by);vx.set(base.bvx);vy.set(base.bvy);p.set(base.bp);
 if(!p[wi]&&Math.hypot(vx[wi],vy[wi])<0.001){const dx=aimX-x[wi],dy=aimY-y[wi],d=Math.hypot(dx,dy);
 if(d>EPS){const a=Math.atan2(dy,dx)+deg*Math.PI/180;vx[wi]=v0*Math.cos(a);vy[wi]=v0*Math.sin(a);}}
 
-const steps=Math.max(1,Math.floor(smartPredT/DT)); // 预测时间：只影响智能枚举
+const steps=Math.max(1,Math.floor(smartPredT/DT));
 const blf=(100-lossB)/100,elf=(100-lossC)/100;
 const initP=new Uint8Array(n);initP.set(p);let pot=0,last=0;
 
@@ -310,8 +379,9 @@ for(let step=0;step<steps;step++){
   const t=(step+1)*DT;
   for(let i=0;i<n;i++){if(p[i]||i===wi)continue;for(const pk of pockets){
     const dx=x[i]-pk.x,dy=y[i]-pk.y,rr=pk.r+base.br[i];
-    if(dx*dx+dy*dy<rr*rr){p[i]=1;if(!initP[i]){pot++;if(t>last)last=t;}break;}}}
-}
+    if(dx*dx+dy*dy<rr*rr && okPocketDir(pk,vx[i],vy[i])){ // <- 加方向限制
+      p[i]=1;if(!initP[i]){pot++;if(t>last)last=t;}break;
+    }}}}
 return{pot,last};}
 
 async function smartAim(){
@@ -339,7 +409,7 @@ w.vx=v0*Math.cos(ang);w.vy=v0*Math.sin(ang);balls.forEach(b=>b.ccr=0);running=tr
 showRunTraj?enableRunTraj():disableRunTraj();
 requestAnimationFrame(tick);};
 
-const stopAll=()=>{for(const b of balls){b.vx=0;b.vy=0;}running=false;disableRunTraj();aimLocked=false;setFine(0);requestDraw();};
+const stopAll=()=>{for(const b of balls){b.vx=0;b.vy=0;}running=false;disableRunTraj();aimLocked=false;setFine(0);onlyWhiteTimer = null;requestDraw();};
 
 // pointer：移动端更一致（preventDefault + 非passive move + offset优先）
 canvas.addEventListener('pointerdown',e=>{if(running||smart.running)return;if(e.pointerType!=='mouse')e.preventDefault();
@@ -360,7 +430,6 @@ $('massControl').addEventListener('input',e=>{mw=linearToLog(+e.target.value);ba
 $('collisionLossControl').addEventListener('input',e=>{lossC=+e.target.value|0;ui();needTraj=1;requestDraw();});
 $('frictionControl').addEventListener('input',e=>{fric=+e.target.value;ui();needTraj=1;requestDraw();});
 $('boundaryLossControl').addEventListener('input',e=>{lossB=+e.target.value|0;ui();needTraj=1;requestDraw();});
-// 预测时间：只影响智能枚举（不触发轨迹重算）
 $('predictionTimeControl').addEventListener('input',e=>{smartPredT=+e.target.value|0;ui();});
 $('increaseCollisionsBtn').addEventListener('click',()=>{if(maxCol<10){maxCol++;ui();if(running&&showRunTraj)enableRunTraj();needTraj=1;requestDraw();}});
 $('decreaseCollisionsBtn').addEventListener('click',()=>{if(maxCol>0){maxCol--;ui();if(running&&showRunTraj)enableRunTraj();needTraj=1;requestDraw();}});
@@ -372,4 +441,5 @@ $('angleFineTune').addEventListener('input',e=>setFine(+e.target.value));
 // resize
 new ResizeObserver(resize).observe(canvas);window.addEventListener('orientationchange',resize);window.addEventListener('resize',resize);
 ui();init();resize();
-})();</script></body></html>
+})();
+</script></body></html>
