--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
   <a href="test.html">HPDB</a>
   <p>Click the link below to play goodluck pool:</p>
   <a href="pool.html">pool</a>
+  <p>Click the link below to play AI minesweeper:</p>
+  <a href="mine/index.html">pool</a>
+
 
   <br><br>
 
@@ -178,3 +181,4 @@
   </script>
 </body>
 </html>
+
