small Update index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <p>Click the link below to play goodluck pool:</p>
   <a href="pool.html">pool</a>
   <p>Click the link below to play AI minesweeper:</p>
-  <a href="mine/index.html">pool</a>
+  <a href="mine/index.html">mine</a>
 
 
   <br><br>
@@ -181,4 +181,5 @@
   </script>
 </body>
 </html>
+
 
