--- a/mine/index.html
+++ b/mine/index.html
@@ -11,7 +11,9 @@
     <div class="boardWrap">
       <!-- 这里是始终显示的区域 -->
       <div class="persistent-controls">
-        <button id="btnNew" class="btn-primary">New Game</button>
+          <button id="btnNewGame" class="btn-primary">New Game</button>
+          <button id="btnStepSolve" class="btn-secondary">Step Solve</button>
+          <button id="btnAllSolve" class="btn-secondary">All Solve</button>
         
         <!-- 新增的 First Move 选择框 -->
         <div class="checkbox-group">
